--- a/static/index-original.html
+++ b/static/index-original.html
@@ -38,7 +38,7 @@
     <video height="600" id="video"></video>
   </div>
   <div id="loading"></div>
-  <script src="/static/js/index.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
